# overdrop

./: .gitignore  Makefile  README.md  agent_worker.py  dashboard.html
config/: overdrop.json
dashboard/: index.html
dashboard/css/: style.css
dashboard/js/: actions.js  api.js  app.js  filters.js  modal.js  render.js  state.js
docs/: architecture.md  refined-areas.md  research-1-sqlite-vs-fs.md  research-2-agentruntime.md  research-3-task-lifecycle.md  research-4-observability.md  validation-checklist.md
python/: adapter_claude.py  adapter_hermes.py  adapter_opencode.py  cli.py  dag_orchestrator.py  dashboard.py  setup.py  tmux_integration.py
python/overdrop/: __init__.py  fsprotocol.py  mailbus.py  resolver.py  types.py  worktree.py
spec/: schema.sql
src/cli/: Cargo.toml
src/cli/src/: main.rs
tests/: test_all.py  test_integration.py  test_worktree.py
tests/e2e/: test_full_run.py
tests/integration/: test_dag.py  test_merge_queue.py  test_task_lifecycle.py
tests/unit/: test_drop_site.py  test_mail_bus.py
ts/overdrop/: package.json  tsconfig.json
ts/overdrop/src/: fsprotocol.ts  index.ts  mailbus.ts  pi-extension.ts  types.ts
