[package]
name = "overdrop"
version = "0.1.0"
edition = "2021"
description = "OverDrop CLI — high-performance task & message manager"

[[bin]]
name = "od"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
